CFN-EC2/CFN-UserData-CFNINIT_CFNSIGNAL_CFNHUP/CFN-UserData1.yaml
# Following example shows how to create AWS Transit Gateway and connect with

AWSTemplateFormatVersion: '2010-09-09'

Description: >- 
"Description 17Nov21 Template to Create an EC2 with UserData. Depends on the VPC, SN. There is a Sleep for 300 Seconds for bootstrap to complete properly, 
but the CFN is not aware of this bootstrapping and shows Instance is ready. Next version of the template will manage this. There is also a Message parameter 
which should be able to change, but as the UserData runs only once, this change doesn't reflect."

Parameters:
  LatestAmiId:
    Description: "AMI for EC2"
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
  Message:
    Description: "Message for HTML page"
    Default: "I am the best"
    Type: "String"
  KeyName:
    Description: SSH Keypair to login to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair. Create the key prior to the stack creation
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC id - Provide the VPC ID of your choice
    Default: vpc-0c8372611d67c21fc
  SubnetId:
    Type: String
    Description: Subnet in which to launch an EC2 - provide the subnet of your choice in the VPC
    Default: subnet-0d1010ee7bc92059d

Resources:
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH and HTTP access via port 22 IPv4 & port 80 IPv4
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - Description: 'Allow SSH IPv4 IN'
          IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - Description: 'Allow HTTP IPv4 IN'
          IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: SG-SSHn80anyIP
  
  Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: "t2.micro"
      ImageId: !Ref "LatestAmiId"
      KeyName: !Ref KeyName
      SubnetId: !Ref SubnetId
      SecurityGroupIds: 
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: PSD-UserData-TestVM
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          yum -y update
          yum -y upgrade
          # simulate some other processes here
          sleep 300
          # Continue
          yum install -y httpd
          systemctl enable httpd
          systemctl start httpd
          echo "<html><head><title>Amazing test page</title></head><body><h1><center>${Message}</center></h1></body></html>" > /var/www/html/index.html
